def mainPackage = "net.sourceforge.pdfjumbler"
def mainClass = "${mainPackage}.PdfJumbler"

apply plugin: "java"
apply plugin: "idea"

sourceCompatibility = JavaVersion.VERSION_1_8
targetCompatibility = JavaVersion.VERSION_1_8

defaultTasks "allJars"

repositories {
	mavenCentral()
}

sourceSets {
	main
}

dependencies {
	compile 'org.tinylog:tinylog-api:2.1.2'
	compile 'org.tinylog:tinylog-impl:2.1.2'
	compile 'org.apache.pdfbox:pdfbox:2.0.21'
}

jar {
	dependsOn classes
	
	archiveFileName = "pdfjumbler.jar"
	
	manifest {
		attributes(
			"Main-Class": mainClass
		)
	}
	
	from sourceSets.main.output

	from {
		configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
	}
	
	exclude "META-INF/*.SF"
	exclude "META-INF/*.DSA"
	exclude "META-INF/*.RSA"
}